--- a/styles/content.css
+++ b/styles/content.css
@@ -173,15 +173,15 @@ div.wrap.white div.inner_wrap div.css_sprite_container_second div{
 }
 
 div.wrap.white div.inner_wrap div.css_sprite_container_second div:nth-child(2){
-	background-position: -415px 0px;	
+	background-position: -415px 0px;
 }
 
  div.wrap.white div.inner_wrap div.css_sprite_container_second div:nth-child(3){
-	background-position: -205px 0px;	
+	background-position: -205px 0px;
 }
 
  div.wrap.white div.inner_wrap div.css_sprite_container_second div:last-child{
-	background-position: 0px 0px;	
+	background-position: 0px 0px;
 }
  div.wrap.white div.inner_wrap div.css_sprite_container_second div h4{
  	display: block;
@@ -203,6 +203,86 @@ div.wrap.white div.inner_wrap h2{
 	color: #3B5997;
 	font-size: 1.7em;
 	text-align: center;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container {
+	height: 300px;
+	position: relative;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container div.testimonial {
+	width: 500px;
+	position: absolute;
+	left: 50%;
+	margin-left: -250px;
+	top: 30px;
+	opacity: 0;
+	transition: opacity 0.5s;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container div.testimonial.visible {
+	opacity: 1;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p {
+	display: block;
+	margin: 0px;
+	color: #3B5997;
+}
+
+div.testimonial img {
+	position: absolute;
+	left: 0px;
+	top: 65%;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-of-type(1) {
+	display: block;
+	border:1px solid #7E8B8C;
+	border-radius: 5px;
+	color: #7E8B8C;
+	padding: 10px;
+	position: relative;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-of-type(1):after {
+	position: absolute;
+	top: 100%;
+	left: 45%;
+	content: '';
+	width: 0;
+	height: 0;
+	z-index: 1;
+	border-left: 20px solid white;
+	border-right: 20px solid white;
+
+	border-top: 20px solid #7E8B8C;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-of-type(2) {
+	padding: 5px 0px;
+	font-size: 1.3rem;
+	font-weight: bold;
+}
+
+
+div.wrap.white div.inner_wrap div.testimonials_container a.arrow {
+	display: block;
+	width: 60px;
+	height: 103px;
+	position: absolute;
+	left: 950px;
+	top: 60px;
+	background-image: url(../images/gallery-arrows.svg);
+	background-position: -45px 0px;
+	background-size: 103px 98px;
+	background-repeat: no-repeat;
+	transition: 0.3s all;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container a.arrow.next {
+	right: 950px;
+	background-position: 0px 0px;
 }
 
 div.wrap.white div.inner_wrap div.integration ul{
@@ -1178,7 +1258,7 @@ body.ltr div#content div.wrap_odd_second div.inner_wrap div.box3 p{
 	display: block;
 	padding-left: 20px;
 	padding-right: 20px;
-	color: white; 
+	color: white;
 }
 
 div#content div.wrap_odd_second div.inner_wrap div.box4 {
@@ -1202,7 +1282,7 @@ body.rtl div#content div.wrap_odd_second div.inner_wrap div.box4 p {
 	padding-bottom: 10px;
 	padding-top: 10px;
 	color: white;
-} 
+}
 
 body.ltr div#content div.wrap_odd_second div.inner_wrap div.box4 p {
 	text-align: left;
@@ -1295,7 +1375,7 @@ div#content div.wrap.white.features div.inner_wrap div.pulling_together ul li:nt
 }
 
 div#content div.wrap.white.features div.inner_wrap div.pulling_together ul li:nth-child(3) {
-	background-image: url(../images/sales-force.png);	
+	background-image: url(../images/sales-force.png);
 }
 
 div#content div.wrap.white.features div.inner_wrap div.pulling_together ul li:nth-child(4) {
@@ -1445,7 +1525,7 @@ body.ltr div#content div.warp.privacy {
 }
 
 body.rtl div#content div.warp.privacy:after{
-	display: block; 
+	display: block;
 	position: absolute;
 	background-color: white;
 	height: 200px;
