--- a/templates/home.xml
+++ b/templates/home.xml
@@ -73,7 +73,7 @@
 								<p><cms:text constant="analyze_calls"/></p>
 							</div>
 						</div>
-						<!-- <h2>
+						<h2>
 							<cms:text constant="testimonials_title"/>
 						</h2>
 						<div class="testimonials_container">
@@ -81,17 +81,10 @@
 								name="gallery"
 								action="show_image_list"
 								random="1"
+								limit="6"
 								template="parts/testimonial.xml"
 								/>
-								<a
-									href="javascript: void(0);"
-									class="arrow previous"
-									/>
-								<a
-									href="javascript: void(0);"
-									class="arrow next"
-									/>
-						</div> -->
+						</div>
 						<h2>
 							<cms:text constant="integration"/>
 						</h2>
