--- a/templates/pricing.xml
+++ b/templates/pricing.xml
@@ -69,6 +69,7 @@
 			</div>
 				<div class="wrap_pricing white">
 					<div class="inner_wrap">
+						<span><cms:text constant="maam"/></span>
 						<h3>
 							<cms:text constant="price_box_info_title"/>
 						</h3>
