--- a/styles/content.css
+++ b/styles/content.css
@@ -229,7 +229,11 @@ div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p {
 div.testimonial img {
 	position: absolute;
 	left: 0px;
-	top: 70%;
+	top: 72%;
+}
+
+body.ltr div.testimonial img {
+	left: 160px;
 }
 
 div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-of-type(1) {
@@ -240,8 +244,8 @@ div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-o
 	background-color: rgb(241, 241, 241);
 	padding: 20px;
 	position: relative;
-	filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.3));
-	-webkit-filter: drop-shadow(0px 0px 2px rgba(0, 0, 0, 0.3));
+	filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.3));
+	-webkit-filter: drop-shadow(0px 0px 1px rgba(0, 0, 0, 0.3));
 }
 
 div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-of-type(1):after {
@@ -253,6 +257,11 @@ div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-o
 	width: 0px;
 	height: 0;
 	border-top: 20px solid rgb(241, 241, 241);
+	border-left: 20px solid transparent;
+}
+
+div.wrap.white div.inner_wrap div.testimonials_container div.testimonial p:nth-of-type(1):after {
+	left: 130px;
 	border-left: 20px solid transparent;
 }
 
@@ -746,6 +755,11 @@ div#content div.wrap_pricing.white:after {
 
 body.rtl div#content div.wrap_pricing.white:after {
 	top:580px;
+}
+
+div.wrap_pricing.white div.inner_wrap span {
+	display: block;
+	text-align: center;
 }
 
 div#content div.wrap_pricing.white div.inner_wrap h3 {
@@ -1511,7 +1525,7 @@ body.ltr div#content div.warp.privacy {
 	display: block;
 	position: relative;
 	overflow: hidden;
-	height: 1800px;
+	height: 1900px;
 }
 
 body.rtl div#content div.warp.privacy:after{
@@ -1535,7 +1549,7 @@ body.ltr div#content div.warp.privacy:after {
 	height: 200px;
 	width: 200%;
 	right: -50%;
-	top: 1620px;
+	top: 1730px;
 	content: ' ';
 	transform: rotate(5deg);
 	-ms-transform: rotate(5deg);
@@ -1577,4 +1591,23 @@ div#content div.wrap.contact_bg div.inner_wrap  div.logo_back{
 	height: 100px;
 	background-color: white;
 	margin-top: 15px;
+}
+
+/**
+ * Google Partners Page
+ */
+
+div#content div.wrap.contact_bg div.inner_wrap  div.logo_back.google {
+	background-image: url(../images/googlepartners.jpg);
+}
+
+/**
+ * Coupon Page
+ */
+
+div#content div.wrap.contact_bg div.inner_wrap  div.logo_back.atd {
+	background-image: url(../images/atd.png);
+	width: 300px;
+	height: 100px;
+	background-size: 300px 90px;
 }
